feat: add sorting by bounding box area
code refactoring

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,9 @@ project(simple_atlas_cramming)
 set(CMAKE_CXX_STANDARD 17)
 include_directories(libs)
 
-add_executable(simple_atlas_cramming src/main.cpp)
+set(SORUCES
+        src/ply_shape.cpp
+        src/ply_shape.h
+        src/main.cpp)
+
+add_executable(simple_atlas_cramming ${SOURCES})
