feat: Strategy "First-fitting" implementation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,8 @@ include_directories(libs)
 set(SOURCES
         src/ply_shape.cpp
         src/ply_shape.h
+        src/atlas_contour.cpp
+        src/atlas_contour.h
         src/main.cpp)
 
 add_executable(simple_atlas_cramming ${SOURCES})
